# PlausiDen-Training-Data

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CLAUDE_UPDATE.md  FRONTEND_SUPERSOCIETY_PLAN.md  GEMINI_UPDATE.md  IMPROVEMENTS.md  OWNERS_GUIDE.md  README.md  STATE.md  conversational_training.jsonl  domain_gap_training.jsonl  fact_qa_pairs.jsonl  generate_lora_data.py  hardware_training.jsonl  lfi_bus.json  magpie_pairs_v2.jsonl  multi_turn_conversations.jsonl  security_training.jsonl  tool_use_expanded.jsonl  tool_use_training.jsonl  training_state.json  wireless_training.jsonl
lfi_vsa_core/: .gitignore  Cargo.toml  SESSION-LOG.md
lfi_vsa_core/src/: agent.rs  api.rs  coder.rs  crypto_epistemology.rs  data_ingestor.rs  lib.rs  persistence.rs
lfi_vsa_core/src/cognition/: causal.rs  grokking_monitor.rs  knowledge.rs  knowledge_compiler.rs  metacognitive.rs  mod.rs  natural_gradient.rs  reasoner.rs
lfi_vsa_core/src/data_quality/: bloom.rs  minhash.rs  mod.rs
lfi_vsa_core/src/hdc/: hadamard.rs  mod.rs  tier_weighted_bundle.rs
lfi_vsa_core/src/hdlm/: ast.rs  codebook.rs  error.rs  mod.rs  tier1_forensic.rs  tier2_decorative.rs
lfi_vsa_core/src/intelligence/: answer_verifier.rs  candle_inference.rs  code_eval.rs  cross_domain.rs  data_poisoning.rs  deepfake_detection.rs  defensive_ai.rs  epistemic_filter.rs  generalization.rs  info_retrieval.rs  local_inference.rs  metrics.rs  mod.rs  model_extraction.rs  prompt_firewall.rs  secret_scanner.rs  self_improvement.rs  textbook_learning.rs  training.rs  training_data.rs  (+1 more)
lfi_vsa_core/tests/: adversarial.rs  daemon_pipeline.rs  deployment.rs  full_training.rs  http_api.rs  integration_pipeline.rs  training_run.rs
(+27 files in other folders)
