[package]
name = "lfi_vsa_core"
version = "0.1.0"
edition = "2021"
description = "Localized Forensic Intelligence — 10,000-dim Bipolar VSA HDC Core"

[dependencies]
bitvec = { version = "1.0.1", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
sha2 = "0.10"
argon2 = "0.5"
regex = "1.10"
rand_chacha = "0.3"
once_cell = "1.19"
parking_lot = "0.12"
rusqlite = { version = "0.31", features = ["bundled"] }
ureq = { version = "2.9", features = ["json"] }
chrono = "0.4"
ndarray = { version = "0.15", features = ["serde"] }
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
toml = "0.8"

fsrs = "5.2"
probminhash = "0.1"
[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
proptest = "1.4"

[package.metadata.deb]
name = "plausiden-ai"
maintainer = "PlausiDen Technologies LLC <dev@plausiden.com>"
copyright = "2026 PlausiDen Technologies LLC"
extended-description = "Sovereign AI that runs on your hardware. Neurosymbolic reasoning with HDC, PSL, Active Inference. Private by default."
section = "science"
priority = "optional"
assets = [
    ["target/release/server", "usr/bin/plausiden-server", "755"],
    ["target/release/lfi", "usr/bin/plausiden", "755"],
]
depends = "$auto"
conf-files = ["/etc/plausiden/config.toml"]
systemd-units = { unit-name = "plausiden", enable = false }
